Fix: menu navigation on mobile scroll underlying content not menu when is long menu Fix: remove all outlines Fix: make every element inside entry-content alignwide if not alignfull

--- a/assets/scss/theme.style.scss
+++ b/assets/scss/theme.style.scss
@@ -333,6 +333,8 @@ a:active {
 .menu-toggle,
 .main-navigation.toggled ul {
   display: block;
+  overflow: scroll;
+  height: 85vh;
 }
 
 @media screen and (min-width: 37.5em) {
@@ -956,26 +958,6 @@ Header
   }
 }
 
-// theme primary colour
-// h1 {
-//   color: $dark;
-// }
-// h2 {
-//   color: $dark;
-// }
-// h3 {
-//   color: $dark;
-// }
-// h4 {
-//   color: $dark;
-// }
-// h5 {
-//   color: $dark;
-// }
-// h6 {
-//   color: $dark;
-// }
-
 .has-small-font-size {
   color: $dark;
 }
@@ -987,13 +969,6 @@ Header
 .has-huge-font-size {
   color: $dark;
 }
-
-// // overwrite spacing between columns
-// @media (min-width: 782px) {
-//   .wp-block-column:not(:first-child) {
-//     margin-left: 80px;
-//   }
-// }
 
 /*
 todo
@@ -1043,10 +1018,10 @@ Banner header for pages, services and teams
   background-position: right center;
   margin: 0px auto 4em !important;
 
-  @include mobiles-all{
-    height:100%;
-    display:block;
-    float:left;
+  @include mobiles-all {
+    height: 100%;
+    display: block;
+    float: left;
   }
 
   .banner-header-overlay {
@@ -1057,13 +1032,13 @@ Banner header for pages, services and teams
     position: absolute;
     left: 0;
 
-    @include mobiles-all{
+    @include mobiles-all {
       display: block;
-      float:left;
-      position:relative;
+      float: left;
+      position: relative;
       height: 100%;
     }
-    }
+  }
 
   .down-arrow-container {
     width: 50px;
@@ -1086,11 +1061,11 @@ Banner header for pages, services and teams
   margin-bottom: $vertical-spacing;
   overflow-wrap: break-word;
 
-  @include mobiles-all{
-    position:relative;
-    display:block;
-    float:left;
-    height:100%;
+  @include mobiles-all {
+    position: relative;
+    display: block;
+    float: left;
+    height: 100%;
     top: 0;
     padding: 1rem;
   }
@@ -1102,7 +1077,6 @@ Banner header for pages, services and teams
     line-height: 50px;
     margin-bottom: 0.5em;
   }
-
 
   .title-meta {
     color: $dark;
@@ -1123,8 +1097,7 @@ Banner header for pages, services and teams
 }
 
 .banner-header-menu-container {
-
-  @include mobiles-all{
+  @include mobiles-all {
     display: block;
     float: left;
     height: 100%;
@@ -1145,10 +1118,10 @@ Banner header for pages, services and teams
     min-width: 420px;
     border-bottom: 1px solid #ffffff;
 
-    @include mobiles-all{
+    @include mobiles-all {
       display: block;
-      width:100%;
-      height:100%;
+      width: 100%;
+      height: 100%;
     }
   }
 
@@ -1354,4 +1327,13 @@ Sidebar menu styling
 
 .shadow-box {
   @include shadow-around;
+}
+
+// make everything not alignfull same width and centered.
+.entry-content {
+  > *:not(.alignfull) {
+    max-width: $max-wide-width;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
